Adjust responsiveness on desktop

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -9,8 +9,12 @@
 }
 
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
-  background: url('../images/bg-top.jpg') top left/300px no-repeat, url('../images/bg-bottom.jpg') bottom right/120px no-repeat;
+  height: 100vh;
+  background: url('../images/bg-top.jpg') top left/300px no-repeat, url('../images/bg-bottom.jpg') bottom right/300px no-repeat;
   background-color: #2a3688;
 }
 
@@ -22,13 +26,14 @@ body {
 }
 
 .picture {
-  margin-top: 40px;
   width: 120px;
   border-radius: 50%;
   border: 5px solid #31698c;
 }
 
 .title {
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-family: 'VCR OSD Mono', sans-serif;
   font-size: 50px;
   color: #f7f7f7;
@@ -38,6 +43,8 @@ body {
 }
 
 .description {
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-family: Abel, sans-serif;
   font-size: 20px;
   color: #f7f7f7;
@@ -62,4 +69,52 @@ body {
 
 .social__icon:hover {
   color: #cd278d;
+}
+
+
+@media screen and (min-width: 1024px) {
+  body {
+    background: url('../images/bg-top.jpg') top left/45% no-repeat, url('../images/bg-bottom.jpg') bottom right/40% no-repeat #2a3688;
+  }
+
+  .picture {
+    margin-top: 20px; 
+    margin-bottom: 30px;
+    width: 180px;
+  }
+
+  .title {
+    font-size: 70px;
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+
+  .description {
+    max-width: 50%; 
+  }
+
+  .social {
+    margin-top: 30px;
+    width: 30%;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  body {
+    background: url('../images/bg-top.jpg') top left/50% no-repeat, url('../images/bg-bottom.jpg') bottom right/50% no-repeat #2a3688;
+  }
+
+  .picture {
+    margin-top: 30px; 
+    width: 200px;
+  }
+
+  .title {
+    font-size: 90px;
+    margin-bottom: 50px;
+  }
+
+  .social {
+    margin-top: 50px;
+  }
 }
