--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -5,7 +5,11 @@
 
 @font-face {
   font-family: 'Abel';
-  src: url('https://fonts.googleapis.com/css?family=Abel')
+  font-style: normal;
+  font-weight: 400;
+  src: local('Abel Regular'),
+       local('Abel-Regular'),
+       url(https://fonts.gstatic.com/s/abel/v8/MwQ5bhbm2POE2V9BPbh5uGM.woff2) format('woff2');
 }
 
 body {
