--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,5 +1,6 @@
 @font-face {
   font-family: 'VCR OSD Mono';
+  font-display: swap;
   src: url('../fonts/VCR_OSD_MONO_1.001.ttf')
 }
 
@@ -7,6 +8,7 @@
   font-family: 'Abel';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Abel Regular'),
        local('Abel-Regular'),
        url(https://fonts.gstatic.com/s/abel/v8/MwQ5bhbm2POE2V9BPbh5uGM.woff2) format('woff2');
@@ -82,7 +84,7 @@ body {
   }
 
   .picture {
-    margin-top: 20px; 
+    margin-top: 20px;
     margin-bottom: 30px;
     width: 180px;
   }
@@ -94,7 +96,7 @@ body {
   }
 
   .description {
-    max-width: 50%; 
+    max-width: 50%;
   }
 
   .social {
@@ -109,7 +111,7 @@ body {
   }
 
   .picture {
-    margin-top: 30px; 
+    margin-top: 30px;
     width: 200px;
   }
 
