--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -88,6 +88,16 @@ body::after {
   color: #cd278d;
 }
 
+@media screen and (min-width: 768px) {
+  body {
+    background: url('../images/bg.png') top left/60% no-repeat #2a3688;
+  }
+
+  body::after {
+    background: url('../images/bg.png') top left/80% no-repeat;
+  }
+}
+
 
 @media screen and (min-width: 1024px) {
   body {
@@ -95,7 +105,9 @@ body::after {
   }
 
   body::after {
-    background: url('../images/bg.png') top left/100% no-repeat;
+    background: url('../images/bg.png') top left/50% no-repeat;
+    width: 100%;
+    height: 100%;
   }
 
   .picture {
@@ -126,7 +138,7 @@ body::after {
   }
 
   body::after {
-    background: url('../images/bg.png') top left/50% no-repeat;
+    background: url('../images/bg.png') top left/40% no-repeat;
   }
 
   .picture {
