--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -14,6 +14,10 @@
        url(https://fonts.gstatic.com/s/abel/v8/MwQ5bhbm2POE2V9BPbh5uGM.woff2) format('woff2');
 }
 
+::selection {
+  background-color: #c92c8d;
+}
+
 body {
   position: relative;
   display: flex;
